[package]
name = "p2p-messaging"
version = "0.1.0"
edition = "2024"




[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3.82"
features = [
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSdpType",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceGatheringState",
    "MessageEvent",
    "ErrorEvent",
    "console",
]