[package]
name = "p2p-messaging"
version = "0.1.0"
edition = "2024"




[lib]
crate-type = ["cdylib"]
name = "p2p_messaging"
path = "client_update/lib.rs"



[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "5.5"
tokio-stream = "0.1"

[dependencies.web-sys]
version = "0.3.82"
features = [
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSdpType",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceGatheringState",
    "RtcIceConnectionState",
    "RtcPeerConnectionState",
    "RtcPeerConnectionIceEvent",
    "MessageEvent",
    "ErrorEvent",
    "console",
    "WebSocket",
]

[[bin]]
name = "p2p-messaging"
path = "src/main.rs"

